fix: repair link on FAQs button on manage.html

--- a/manage/templates/manage/manage.html
+++ b/manage/templates/manage/manage.html
@@ -29,7 +29,7 @@
                 <a href="{% url 'add_product' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold shadow-sm me-3 mb-3">
                     <p class="d-inline">ADD PRODUCT</p>
                 </a>
-                <a href="{% url 'add_product' %}" class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm me-3 mb-3">
+                <a href="{% url 'faqs' %}" class="ib-button ib-button-yellow text-decoration-none text-ib-dark font-title weight-bold shadow-sm me-3 mb-3">
                     <p class="d-inline">FAQS</p>
                 </a>
                 <a href="{% url 'admin:index' %}" class="ib-button ib-button-light-blue text-decoration-none text-ib-dark font-title weight-bold shadow-sm me-3 mb-3">
