feat: add contact us form and view

--- a/manage/templates/manage/manage.html
+++ b/manage/templates/manage/manage.html
@@ -64,7 +64,7 @@
 
                 <!-- Messages Filter Buttons -->
                 <div class="d-flex justify-content-end align-items-end mb-4">
-                    <p class="ib-lh-1">FILTERS:</p>
+                    <p class="ib-lh-1">FILTER BY:</p>
                     <div class="d-flex button-group">
                         <a href="{% url 'manage' %}?open=True" class="ib-button-sm ib-button-warning text-decoration-none text-ib-dark font-title weight-bold shadow-sm ms-3">
                             <p class="d-inline">OPEN</p>
