--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -12,5 +12,5 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     
-    <p class="text-ib-dark">{% blocktrans %}We have sent you an e-mail. Please <a href="" class=" text-blue weight-semibold text-decoration-none text-link-blue">contact us</a> if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p class="text-ib-dark">{% blocktrans %}We have sent you an e-mail. Please <a href="{% url 'contact_us' %}" class=" text-blue weight-semibold text-decoration-none text-link-blue">contact us</a> if you do not receive it within a few minutes.{% endblocktrans %}</p>
 {% endblock %}
