--- a/templates/base.html
+++ b/templates/base.html
@@ -231,7 +231,7 @@
                     <a class="d-block text-decoration-none" href="{% url 'faqs' %}">
                         <p class="text-ib-light mb-2 footer-link-text">FAQs</p>
                     </a>
-                    <a class="d-block text-decoration-none" href="">
+                    <a class="d-block text-decoration-none" href="{% url 'contact_us' %}">
                         <p class="text-ib-light mb-2 footer-link-text">CONTACT US</p>
                     </a>
                 </div>
