--- a/manage/templates/manage/contact_us.html
+++ b/manage/templates/manage/contact_us.html
@@ -22,7 +22,7 @@
             <!-- Contact Us Form -->
             <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-1 mt-2 font-body text-dark-grey">
                 <p class="mb-3 weight-semibold">Send us a message using the form below.</p>
-                <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+                <form action="{% url 'contact_us' %}" method="POST" id="message-form">
                     {% csrf_token %}
                     {{ form }}
 
