fix: added onerror to image tags to show 'no-image' if link is broken

--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,7 +1,7 @@
 <!-- Product Image -->
 {% if item.product.image %}
     <a href="{% url 'product_detail' item.product.id %}">
-        <img class="image-ratio img-fluid" src="{{ item.product.image.url }}" alt="{{ product.name }}">
+        <img class="image-ratio img-fluid" src="{{ item.product.image.url }}" alt="{{ product.name }}" onerror="this.onerror=null;this.src='{{ MEDIA_URL }}no_image.jpg'">
     </a>
 {% else %}
     <a href="{% url 'product_detail' item.product.id %}">
