--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,7 +18,7 @@
             <!-- Product Image -->
             {% if product.image %}
                 <a class="" href="{{ product.image.url }}" target="_blank">
-                    <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" onerror="this.onerror=null;this.src='{{ MEDIA_URL }}no_image.jpg'">
                 </a>
             {% else %}
                 <img class="img-fluid" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ product.name }}">
