--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -35,7 +35,7 @@
                     <div class="row">
                         <div class="col-4">
                             {% if item.product.image %}
-                                <img class="image-ratio w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                                <img class="image-ratio w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}" onerror="this.onerror=null;this.src='{{ MEDIA_URL }}no_image.jpg'">
                             {% else %}
                                 <img class="image-ratio img-fluid" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ product.name }}">
                             {% endif %}
