feat: update all pages title and meta

--- a/faqs/templates/faqs/edit_faq.html
+++ b/faqs/templates/faqs/edit_faq.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 
-<!-- {% block extra_title %}- Edit FAQs {{ faq.question }}{% endblock %}
+{% block extra_title %}- Edit FAQs {{ faq.question }}{% endblock %}
 
 {% block extra_meta %}
     <meta name="description" content="Edit Faq {{ faq.question }} - Admin Only">
-{% endblock %} -->
+{% endblock %}
 
 {% block page_header %}
     <div class="container header-container">
