--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -4,7 +4,7 @@
 {% block extra_title %}- Products{% endblock %}
 
 {% block extra_meta %}
-    <meta name="description" content="WELCOME TO ISLAND BEES! We cater to all your bees' needs. Check out our range of high quality bee products. We sell colonies of bees, hives, tools, kit, honey & other bee related products. All hand made or locally sourced.">
+    <meta name="description" content="WELCOME TO ISLAND BEES! Check out our fantastic range of products.">
 {% endblock %}
 
 {% block content %}
